# pyqwikswitch

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  example.py  example_devices.json  example_listen.json  pyproject.toml  pyqwikswitch.py  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
pyqwikswitch/: __init__.py  async.py  async_.py  qwikswitch.py  threaded.py
src/pyqwikswitch/: __init__.py  async_.py  qsusb.py  qwikswitch.py
src/tests/: conftest.py  test_async.py  test_qsusb.py  test_qwikswitch.py
